deferred support for EJB, I can live without it, while amazon Micro instance isn't enough to run all of this even in development environment