@@ -12,24 +12,13 @@
 		<artifactId>www</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	
+
 	<properties>
 		<version.org.jboss.arquillian>1.0.0-SNAPSHOT</version.org.jboss.arquillian>
 		<version.org.jboss.jbossas>6.0.0.Final</version.org.jboss.jbossas>
 		<jboss.home>${project.build.directory}/jboss-${version.org.jboss.jbossas}</jboss.home>
 	</properties>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.jboss.jbossas</groupId>
-				<artifactId>jboss-as-depchain</artifactId>
-				<version>${version.org.jboss.jbossas}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 	<build>
 		<plugins>
 			<plugin>
@@ -41,177 +30,15 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>unpack</id>
-						<phase>generate-test-resources</phase>
-						<!-- So run before testing -->
-						<goals>
-							<goal>unpack</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.jboss.jbossas</groupId>
-									<artifactId>jboss-as-distribution</artifactId>
-									<version>${version.org.jboss.jbossas}</version>
-									<type>zip</type>
-									<overWrite>false</overWrite>
-									<outputDirectory>${project.build.directory}</outputDirectory>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-ejb-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-					<ejbVersion>3.1</ejbVersion>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.6</version>
-
-				<configuration>
-					<additionalClasspathElements>
-						<additionalClasspathElement>${jboss.home}/client/jbossws-native-client.jar</additionalClasspathElement>
-						<additionalClasspathElement>${jboss.home}/server/default/deploy/jbossweb.sar</additionalClasspathElement>
-					</additionalClasspathElements>
-
-					<trimStackTrace>false</trimStackTrace>
-					<printSummary>true</printSummary>
-
-					<!-- Caution: no linebreak here ! -->
-					<argLine>-Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Djava.endorsed.dirs=${jboss.home}/lib/endorsed -Djboss.home=${jboss.home} -Djboss.boot.server.log.dir=${jboss.home} -Dorg.jboss.reflect.spi.TypeInfoFactory=org.jboss.reflect.plugins.introspection.IntrospectionTypeInfoFactory</argLine>
-				</configuration>
-
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.4.3</version>
-				<executions>
-					<execution>
-						<id>copy-test-ds</id>
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-						<overwrite>true</overwrite>
-							<outputDirectory>${jboss.home}/server/default/deploy/</outputDirectory>
-							   <resources>
-									<resource>
-										<directory>src/test/resources/deploy/</directory>
-										<includes>
-											<include> **/*-ds.xml</include>
-										</includes>
-									</resource>
-								</resources>
-						</configuration>
-					</execution>
-					<execution>
-						<id>copy-main-ds</id>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-						<overwrite>true</overwrite>
-							<outputDirectory>${jboss.home}/server/default/deploy/</outputDirectory>
-							   <resources>
-									<resource>
-										<directory>src/main/resources/deploy/</directory>
-										<includes>
-											<include> **/*-ds.xml</include>
-										</includes>
-									</resource>
-								</resources>
-						</configuration>
-					</execution>
-					<execution>
-						<id>copy-init-db</id>
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${jboss.home}/server/default/data/</outputDirectory>
-							   <resources>
-									<resource>
-										<directory>src/main/resources/db</directory>
-										<includes>
-											<include>**/*</include>
-										</includes>
-									</resource>
-								</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>org.jboss.spec</groupId>
-			<artifactId>jboss-javaee-6.0</artifactId>
-			<version>1.0.0.Final</version>
-			<type>pom</type>
-			<scope>provided</scope>
-		</dependency>
-		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-api</artifactId> 
-			<version>1.6.1</version> </dependency> -->
-		<dependency>
-			<groupId>org.jboss.arquillian.container</groupId>
-			<artifactId>arquillian-jbossas-embedded-6</artifactId>
-			<version>${version.org.jboss.arquillian}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.jbossas</groupId>
-			<artifactId>jboss-as-depchain</artifactId>
-			<version>${version.org.jboss.jbossas}</version>
-			<type>pom</type>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<artifactId>xercesImpl</artifactId>
-					<groupId>xerces</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>xml-apis</artifactId>
-					<groupId>xml-apis</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>jta</artifactId>
-					<groupId>javax.transaction</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.arquillian</groupId>
-			<artifactId>arquillian-testng</artifactId>
-			<version>${version.org.jboss.arquillian}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.arquillian</groupId>
-			<artifactId>arquillian-api</artifactId>
-			<version>${version.org.jboss.arquillian}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.dbunit</groupId>
-			<artifactId>dbunit</artifactId>
-			<version>2.4.8</version>
-			<scope>test</scope>
+			<groupId>org.exoplatform.portal</groupId>
+			<artifactId>starter-gatein</artifactId>
+			<version>3.1.0-GA</version>
+			<type>ear</type>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -220,10 +47,22 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.3.148</version>
-			<scope>runtime</scope>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.0.0.GA</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.enterprise</groupId>
+			<artifactId>cdi-api</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.0-api</artifactId>
+			<version>1.0.0.Final</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
